--- a/Tray/src/main/res/layout/fragment_delivery_address_bottom_sheet.xml
+++ b/Tray/src/main/res/layout/fragment_delivery_address_bottom_sheet.xml
@@ -430,7 +430,7 @@
                             android:background="@drawable/edittext_bg"
                             android:fontFamily="@font/poppins"
                             android:gravity="center_vertical"
-                            android:hint="Area, Colony, Street, SectorEnter Address"
+                            android:hint="Area, Colony, Street, Sector"
                             android:inputType="text"
                             android:padding="8dp"
                             android:textColor="#000000"
