--- a/Sdk/src/main/res/layout/fragment_main_bottom_sheet.xml
+++ b/Sdk/src/main/res/layout/fragment_main_bottom_sheet.xml
@@ -137,7 +137,7 @@
                                 android:fontFamily="@font/inter_semibold"
                                 android:textColor="@android:color/black"
                                 android:textSize="16sp"
-                                app:layout_constraintBottom_toTopOf="@+id/itemsInOrderRecyclerView"
+                                android:layout_marginEnd="4dp"                                app:layout_constraintBottom_toTopOf="@+id/itemsInOrderRecyclerView"
                                 app:layout_constraintEnd_toStartOf="@+id/arrowIcon"
                                 app:layout_constraintTop_toTopOf="parent" />
 
