--- a/Sdk/src/main/res/layout/fragment_net_banking_bottom_sheet.xml
+++ b/Sdk/src/main/res/layout/fragment_net_banking_bottom_sheet.xml
@@ -125,6 +125,8 @@
                         android:id="@+id/nestedScrollView"
                         android:layout_width="match_parent"
                         android:layout_height="420dp"
+                        android:scrollbars="vertical"
+                        android:fadeScrollbars="false"
                         android:layout_marginTop="16dp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="@+id/searchView"
