--- a/Sdk/src/main/res/layout/fragment_wallet_bottom_sheet.xml
+++ b/Sdk/src/main/res/layout/fragment_wallet_bottom_sheet.xml
@@ -126,6 +126,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="420dp"
                         android:layout_marginTop="16dp"
+                        android:scrollbars="vertical"
+                        android:fadeScrollbars="false"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="@+id/searchView"
                         app:layout_constraintTop_toBottomOf="@+id/searchView">
